--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 	</head>
 	<body>
- 		<div id="title_bar">Phaune<strong>Gappe</strong> Training App</div>
+ 		<div id="title_bar">Phauneuu<strong>Gappeuu</strong> Training App</div>
 
 		<div id="welcome" class="view">
 		  <div class="app_button" id="map_button">Show My Location</div>
